# WhatsApp-Chat-Exporter

./: .codex.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_OPTIMIZATION.md  LICENSE  LICENSE.django  Makefile  README.md  WORKFLOW.md  full-repository-analysis.md  pyproject.toml  requirements.txt  security_fix.py  test_template_system.py
.claude/: settings.local.json
.github/: docs.html  generate-website.js  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  compile-binary.yml  generate-website.yml  python-publish.yml
AppDomainGroup-group.net.whatsapp.WhatsApp.shared/Message/vCards/: 51997554794ErikaRiosSiemmw.vcf  526622054061.vcf  ABCHarnan.vcf  AEstribor.vcf  AaronAviles.vcf  AaronRamirez.vcf  AaronRamírezASELEC.vcf  AbelASELEC.vcf  AbelAdminAselec.vcf  AbelFlores.vcf  AbelardoGil.vcf  Adelermo.vcf  AdrianRodríguez.vcf  AdrianaCruz.vcf  AdrianaGaxiola.vcf  AgustinDiazArmenta.vcf  AirbnbCiudadApodaca.vcf  AislamientosDelNoroeste.vcf  AlamosAdventure.vcf  AlanArmenta.vcf  AlanMontijo.vcf  AlbertinVillanuevaTSK.vcf  AlbertoFlores.vcf  AlbertoLugoWindows10.vcf  AlbertoOzunaGrupoGuaynas.vcf  (+705 more)
Whatsapp_Chat_Exporter/: README_CHAT_CLEANER.md  __init__.py  __main__.py  android_crypt.py  android_handler.py  backup_detector.py  bplist.py  bplist_test.py  chat_cleaner.py  cli.py  data_model.py  database_optimizer.py  exported_handler.py  ios_handler.py  ios_media_handler.py  ios_media_handler_test.py  logging_config.py  normalizer.py  optimized_handlers.py  query_optimizer.py  security_utils.py  test_archive.py  test_auto_detect.py  test_backup_detector.py  test_chat_cleaner.py  test_cli.py  test_cli_validation.py  test_codex_setup.py  test_copy_exported_media.py  test_copy_parallel.py  test_database_optimizer.py  test_exported_handler.py  test_fetch_row_safely.py  test_group_separation.py  test_ios_media_handler.py  test_message.py  test_normalizer.py  test_path_handling.py  test_resource_management.py  test_security_fixes.py  (+10 more)
docs/: CHAT_CLEANER.md  TEMPLATE_OPTIMIZED.md
run/: setup.sh
scripts/: brazilian_number_processing.py  brazilian_number_processing_test.py  bruteforce_crypt15.py  phone_number_processing.py  phone_number_processing_test.py
test_environment/: .env.example  QUICK_START.md  README.md  TESTING_GUIDE.md  check_setup.sh  comandos_prueba_ios.txt  setup_test_env.sh
test_environment/_backup_advanced_features/: advanced_methods.py  example_config.json  professional_config.json  test_all_formats.sh
test_environment/android/: README.md
test_environment/configs/: android_basic.json  android_encrypted.json  exported_chat.json  ios_basic.json  ios_business.json  performance_test.json
test_environment/exported/: README.md
test_environment/ios/: README.md
test_environment/scripts/: ANALYZER_README.md  README.md  advanced_analyzer_config.json  advanced_content_analyzer.py  advanced_exporters.py  advanced_methods.py  analizar_chats_español.sh  analyze_my_data.sh  analyzer_config_sample.json  business_config.json  config_manager.py  content_analyzer.py  create_custom_config.py  demo_config.json  family_config.json  my_data_config.json  requirements.txt  run_advanced_analyzer.sh  run_analyzer.sh  secure_analyzer_config.json  secure_content_analyzer.py  security_features.py  setup.py  social_config.json  spanish_config.json  test_advanced_analyzer.sh  test_analyzer.sh  test_android_basic.sh  test_android_encrypted.sh  test_exported_chat.sh  test_ios_basic.sh  test_secure_analyzer.sh  visual_content_analyzer.py  web_dashboard.py  work_config.json
test_environment/test_sample/: 0-WhatsApp.html  120363022335028984-Shein.html  120363022851594979-Alamos SS .html  120363025233343933-A ver sus outfits.html  120363026430640869-Proyecto SIEMENS .html  120363027433745146-Fiesta sorpresa andrea.html  120363027655024543-Carnita asada SIEMENS.html  120363028070656236-FOTOS ACTIVIDADES DIARIAS.html  120363028641216530-Campamento de las chicas.html  120363029625325257-Posboda almita.html
(+14784 files in other folders)
