[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "whatsapp-chat-exporter"
version = "0.12.0"
description = "A Whatsapp database parser that provides history of your Whatsapp conversations in HTML and JSON. Android, iOS, iPadOS, Crypt12, Crypt14, Crypt15 supported."
readme = "README.md"
authors = [
    { name = "KnugiHK", email = "hello@knugi.com" }
]
license = { text = "MIT" }
keywords = [
    "android", "ios", "parsing", "history", "iphone", "message", "crypt15",
    "customizable", "whatsapp", "android-backup", "messages", "crypt14",
    "crypt12", "whatsapp-chat-exporter", "whatsapp-export", "iphone-backup",
    "whatsapp-database", "whatsapp-database-parser", "whatsapp-conversations"
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities",
    "Topic :: Database"
]
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "bleach",
    "typer",
    "rich",
    "pydantic>=2",
    "psutil",
    "markupsafe",
    "aiofiles"
]

[project.optional-dependencies]
android_backup = ["pycryptodome", "javaobj-py3"]
crypt12 = ["pycryptodome"]
crypt14 = ["pycryptodome"]
crypt15 = ["pycryptodome", "javaobj-py3"]
all = ["pycryptodome", "javaobj-py3", "vobject", "phonenumbers"]
everything = ["pycryptodome", "javaobj-py3", "vobject", "phonenumbers"]
backup = ["pycryptodome", "javaobj-py3"]
vcards = ["vobject", "pycryptodome", "javaobj-py3", "phonenumbers"]
ios_encrypted = ["iphone_backup_decrypt"]

[project.scripts]
wtsexporter = "Whatsapp_Chat_Exporter.cli:app"
waexporter = "Whatsapp_Chat_Exporter.cli:app"
whatsapp-chat-exporter = "Whatsapp_Chat_Exporter.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["Whatsapp_Chat_Exporter"]

[tool.setuptools.package-data]
Whatsapp_Chat_Exporter = ["*.html"]

[tool.poetry]
name = "whatsapp-chat-exporter"
version = "0.12.0"
description = "A Whatsapp database parser that provides history of your Whatsapp conversations in HTML and JSON. Android, iOS, iPadOS, Crypt12, Crypt14, Crypt15 supported."
readme = "README.md"
authors = ["KnugiHK <hello@knugi.com>"]
license = "MIT"
packages = [{ include = "Whatsapp_Chat_Exporter" }]
include = ["Whatsapp_Chat_Exporter/*.html"]

[tool.poetry.dependencies]
python = ">=3.11"
jinja2 = "*"
bleach = "*"
typer = "*"
rich = "*"
pydantic = ">=2"
psutil = "*"
markupsafe = "*"
aiofiles = "*"
vobject = {version = "^0.9.9", optional = true}
phonenumbers = {version = "^9.0.9", optional = true}
pycryptodome = {version = "^3.23.0", optional = true}
javaobj-py3 = {version = "^0.4.4", optional = true}
iphone_backup_decrypt = {version = "*", optional = true}

[tool.poetry.extras]
android_backup = ["pycryptodome", "javaobj-py3"]
crypt12 = ["pycryptodome"]
crypt14 = ["pycryptodome"]
crypt15 = ["pycryptodome", "javaobj-py3"]
all = ["pycryptodome", "javaobj-py3", "vobject", "phonenumbers"]
everything = ["pycryptodome", "javaobj-py3", "vobject", "phonenumbers"]
backup = ["pycryptodome", "javaobj-py3"]
vcards = ["vobject", "pycryptodome", "javaobj-py3", "phonenumbers"]
ios_encrypted = ["iphone_backup_decrypt"]

[tool.poetry.scripts]
wtsexporter = "Whatsapp_Chat_Exporter.cli:app"
waexporter = "Whatsapp_Chat_Exporter.cli:app"
whatsapp-chat-exporter = "Whatsapp_Chat_Exporter.cli:app"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
black = "*"
ruff = "*"
mypy = "*"
mkdocs = "*"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"
